<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.espe.register.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_layoutTextInput"
        android:layout_marginBottom="@dimen/layout_TextInputNombre_marginBottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_nombre"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/tieNombre" >

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="@dimen/width_datePicker"
            android:layout_height="@dimen/datePicker_height"
            android:datePickerMode="spinner"
            android:calendarViewShown="false">
        </DatePicker>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTelefono"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_layoutTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_telefono"
            android:id="@+id/tieTelefono"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_layoutTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_email"
            android:id="@+id/tieEmail"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_descripcion"
            android:id="@+id/tieDescripcion"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonSiguiente_height"
        android:text="@string/button_siguiente"
        android:id="@+id/buttonSiguiente"
        android:theme="@style/botones"
        />

</LinearLayout>
